Fix text alignment when screen is large

--- a/src/styles/pages/_ministries-and-services.scss
+++ b/src/styles/pages/_ministries-and-services.scss
@@ -106,6 +106,7 @@
 @media screen and (min-width: $large) {
   #ministries-and-services-page {
     .section-main {
+      text-align: start;
       padding: 120px 0;
 
       .images {
